move jpa test framework to its own package namespace
Signed-off-by: Lukas Jungmann <lukas.jungmann@oracle.com>